--- a/src/App.css
+++ b/src/App.css
@@ -9,16 +9,6 @@
   background-color: #dbdbdb;
 }
 
-.homestays {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-}
-
-.homestay {
-  margin: 10px;
-}
-
 .peta {
   flex-grow: 1;
   height: 100vh;
@@ -26,4 +16,24 @@
   position: sticky;
   background-color: steelblue;
 }
+
+.homestays {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+}
+
+.search {
+  padding: 10px;
+  margin-right: 5px;
+}
+
+.search input {
+  height: 40px;
+  font-size: 20px;
+  padding-left: 5px;
+  color: #999;
+  width: 100%;
+}
+
 
